--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,19 @@
 %% Conference Papers
 
+%% TODO: add Jonathan after shepherd approves that
+@misc{BlancoDHH25,
+  author = {Roberto Blanco and
+            Léon Ducruet and
+            Sebastian Harwig and
+            C\u{a}t\u{a}lin Hri\c{t}cu},
+  title  = {{FSLH}: Flexible Mechanized Speculative Load Hardening},
+  howpublished = {Accepted at CSF'25, arXiv:2502.03203},
+  url    = {https://arxiv.org/abs/2502.03203},
+  month  = feb,
+  year   = {2025},
+  chcontrib = {equalthree},
+}
+
 @inproceedings{ThibaultBLAAGHT24,
   author = {Jérémy Thibault and
             Roberto Blanco and
@@ -979,10 +993,10 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   author = {C\u{a}t\u{a}lin Hri\c{t}cu and
             Roberto Blanco},
   title = {Software Foundations: Security Foundations},
-  month = mar,
-  year = {2024},
+  month = april,
+  year = {2025},
   publisher = {Draft textbook volume},
-  url = {https://mpi-sp-foe-2023-24.github.io/book/toc.html},
+  url = {https://mpi-sp-foe-2025.github.io/book-secf},
   key = {Books},
   chcontrib = {major},
 }
@@ -1081,6 +1095,33 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 
 %% Drafts
 
+@misc{AndriciAHIMRW25,
+  author = {Cezar-Constantin Andrici and
+            Danel Ahman and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Ruxandra Icleanu and
+            Guido Martínez and
+            Exequiel Rivas and
+            Théo Winterhalter},
+  title = {{SecRef*}: Securely Sharing Mutable References Between Verified and Unverified Code in {F*}},
+  howpublished = {arXiv:2503.00404},
+  url = {https://arxiv.org/abs/2503.00404},
+  month = feb,
+  year = {2025},
+  chcontrib = {minor},
+}
+
+@misc{ThibaultLH25,
+  author = {Jérémy Thibault and
+            Joseph Lenormand and
+            C\u{a}t\u{a}lin Hri\c{t}cu},
+  title = {Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs},
+  howpublished = {arXiv:2503.19609},
+  url = {https://arxiv.org/abs/2503.19609},
+  month = mar,
+  year = {2025},
+  chcontrib = {minor},
+},
 
 %% Workshop Papers
 
