--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,17 +1,31 @@
 %% Conference Papers
 
-%% TODO: add Jonathan after shepherd approves that
-@misc{BlancoDHH25,
-  author = {Roberto Blanco and
+@misc{ThibaultLH25,
+  author = {Jérémy Thibault and
+            Joseph Lenormand and
+            C\u{a}t\u{a}lin Hri\c{t}cu},
+  title = {Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs},
+  howpublished = {arXiv:2503.19609; to appear at ITP'25},
+  url = {https://arxiv.org/abs/2503.19609},
+  month = mar,
+  year = {2025},
+  chcontrib = {minor},
+},
+
+@inproceedings{BaumannBDHH25,
+  author = {Jonathan Baumann and
+            Roberto Blanco and
             Léon Ducruet and
             Sebastian Harwig and
             C\u{a}t\u{a}lin Hri\c{t}cu},
   title  = {{FSLH}: Flexible Mechanized Speculative Load Hardening},
-  howpublished = {Accepted at CSF'25, arXiv:2502.03203},
+  booktitle = {38th {IEEE} Computer Security Foundations Symposium (CSF)},
+  shortbooktitle = {CSF},
+  publisher = {IEEE},
   url    = {https://arxiv.org/abs/2502.03203},
-  month  = feb,
+  month  = jun,
   year   = {2025},
-  chcontrib = {equalthree},
+  chcontrib = {equalfour},
 }
 
 @inproceedings{ThibaultBLAAGHT24,
@@ -1111,18 +1125,6 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   chcontrib = {minor},
 }
 
-@misc{ThibaultLH25,
-  author = {Jérémy Thibault and
-            Joseph Lenormand and
-            C\u{a}t\u{a}lin Hri\c{t}cu},
-  title = {Nanopass Back-Translation of Call-Return Trees for Mechanized Secure Compilation Proofs},
-  howpublished = {arXiv:2503.19609},
-  url = {https://arxiv.org/abs/2503.19609},
-  month = mar,
-  year = {2025},
-  chcontrib = {minor},
-},
-
 %% Workshop Papers
 
 @misc{BlancoDFGH23,
@@ -1180,18 +1182,6 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   year = 2022,
   month = jun,
   chcontrib = {minor},
-}
-
-@misc{nanopass,
-  author = {Jérémy Thibault and
-            C\u{a}t\u{a}lin Hri\c{t}cu},
-  title = {Nanopass Back-Translation of Multiple Traces for Secure Compilation Proofs
-},
-  howpublished = {Extended Abstract at Workshop on Principles of Secure Compilation (PriSC)},
-  url = {https://popl21.sigplan.org/details/prisc-2021-papers/5/Nanopass-Back-Translation-of-Multiple-Traces-for-Secure-Compilation-Proofs},
-  month = jan,
-  year = 2021,
-  chcontrib = average,
 }
 
 @misc{FachiniHSELAPT17,
