--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1,5 +1,21 @@
 %% Conference Papers
 
+@misc{AndriciAHIMRW25,
+  author = {Cezar-Constantin Andrici and
+            Danel Ahman and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Ruxandra Icleanu and
+            Guido Martínez and
+            Exequiel Rivas and
+            Théo Winterhalter},
+  title = {{SecRef*}: Securely Sharing Mutable References Between Verified and Unverified Code in {F*}},
+  howpublished = {arXiv:2503.00404; to appear at ICFP'25},
+  url = {https://arxiv.org/abs/2503.00404},
+  month = feb,
+  year = {2025},
+  chcontrib = {minor},
+}
+
 @misc{ThibaultLH25,
   author = {Jérémy Thibault and
             Joseph Lenormand and
@@ -25,6 +41,7 @@
   url    = {https://arxiv.org/abs/2502.03203},
   month  = jun,
   year   = {2025},
+  acceptance   = {38/198=0.19},
   chcontrib = {equalfour},
 }
 
@@ -1108,22 +1125,6 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 }
 
 %% Drafts
-
-@misc{AndriciAHIMRW25,
-  author = {Cezar-Constantin Andrici and
-            Danel Ahman and
-            C\u{a}t\u{a}lin Hri\c{t}cu and
-            Ruxandra Icleanu and
-            Guido Martínez and
-            Exequiel Rivas and
-            Théo Winterhalter},
-  title = {{SecRef*}: Securely Sharing Mutable References Between Verified and Unverified Code in {F*}},
-  howpublished = {arXiv:2503.00404},
-  url = {https://arxiv.org/abs/2503.00404},
-  month = feb,
-  year = {2025},
-  chcontrib = {minor},
-}
 
 %% Workshop Papers
 
