--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1021,10 +1021,9 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 }
 
 @book{SfSef,
-  author = {C\u{a}t\u{a}lin Hri\c{t}cu and
-            Roberto Blanco},
+  author = {C\u{a}t\u{a}lin Hri\c{t}cu},
   title = {Software Foundations: Security Foundations},
-  month = apr,
+  month = oct,
   year = {2025},
   publisher = {Draft textbook volume},
   url = {https://mpi-sp-foe-2025.github.io/book-secf},
