--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -806,6 +806,34 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 
 %% Journal Papers
 
+@article{everest-toplas,
+  author = {Danel Ahman and
+            Karthikeyan Bhargavan and
+            Barry Bond and
+            Jay Bosamiya and
+            Christopher Brzuska and
+            Antoine Delignat-Lavaud and
+            Cédric Fournet and
+            Aymeric Fromherz and
+            Sydney Gibson and
+            Chris Hawblitzel and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Markulf Kohlweiss and
+            Guido Martínez and
+            Haobin Ni and
+            Bryan Parno and
+            Jonathan Protzenko and
+            Tahina Ramananandro and
+            Aseem Rastogi and
+            Exequiel Rivas and
+            Nikhil Swamy and
+            Santiago Zanella-Béguelin},
+  title = {Project Everest: Perspectives from Developing Industrial-grade High-Assurance Software},
+  howpublished = {Draft; Accepted at TOPLAS},
+  month = sept,
+  year = {2025},
+}
+
 @article{ssprove-toplas,
   author    = {Philipp G. Haselwarter and
                Exequiel Rivas and
@@ -1125,6 +1153,22 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 
 %% Drafts
 
+@misc{AndriciAHMPRW25,
+  author = {Cezar-Constantin Andrici and
+            Danel Ahman and
+            C\u{a}t\u{a}lin Hri\c{t}cu and
+            Guido Martínez and
+            Abigail Pribisova and
+            Exequiel Rivas and
+            Théo Winterhalter},
+  title = {Towards formally secure compilation of verified {F*} programs against unverified ML contexts (Extended Abstract)},
+  howpublished = {Draft},
+  url = {https://cezarandrici.com/wp-content/uploads/publications/prisc26.pdf},
+  month = nov,
+  year = {2025},
+  chcontrib = {minor},
+}
+
 %% Workshop Papers
 
 @misc{BlancoDFGH23,
@@ -1164,6 +1208,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   title = {Verifying non-terminating programs with {IO} in {F*}},
   howpublished = {Presentation at the 10th ACM SIGPLAN Workshop on Higher-Order
                   Programming with Effects (HOPE)},
+  url = {https://theowinterhalter.github.io/res/iodiv-hope.pdf},
   year = 2022,
   month = sep,
   chcontrib = {minor},
@@ -1179,6 +1224,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   title = {Partial {Dijkstra} Monads for All},
   howpublished = {Extended abstract of presentation at the 28th International
                   Conference on Types for Proofs and Programs (TYPES)},
+  url = {https://types22.inria.fr/files/2022/06/TYPES_2022_paper_18.pdf},
   year = 2022,
   month = jun,
   chcontrib = {minor},
