--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1161,7 +1161,8 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
             Abigail Pribisova and
             Exequiel Rivas and
             Théo Winterhalter},
-  title = {Towards formally secure compilation of verified {F*} programs against unverified ML contexts (Extended Abstract)},
+  title = {Towards formally secure compilation of verified {F*} programs
+           against unverified {ML} contexts (Extended Abstract)},
   howpublished = {Draft},
   url = {https://cezarandrici.com/wp-content/uploads/publications/prisc26.pdf},
   month = nov,
