--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1049,9 +1049,10 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 }
 
 @book{SfSef,
-  author = {C\u{a}t\u{a}lin Hri\c{t}cu},
+  author = {C\u{a}t\u{a}lin Hri\c{t}cu and
+            Yonghyun Kim},
   title = {Software Foundations: Security Foundations},
-  month = oct,
+  month = dec,
   year = {2025},
   publisher = {Draft textbook volume},
   url = {https://mpi-sp-foe-2025.github.io/book-secf},
