--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1048,16 +1048,16 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
   chcontrib = {minor},
 }
 
-@book{SfSef,
+@book{SfSecf,
   author = {C\u{a}t\u{a}lin Hri\c{t}cu and
             Yonghyun Kim},
   title = {Software Foundations: Security Foundations},
-  month = dec,
-  year = {2025},
-  publisher = {Draft textbook volume},
-  url = {https://mpi-sp-foe-2025.github.io/book-secf},
+  month = jan,
+  year = {2026},
+  publisher = {Electronic textbook volume},
+  url = {https://softwarefoundations.cis.upenn.edu/secf-current},
   key = {Books},
-  chcontrib = {major},
+  chcontrib = {firstauthor},
 }
 
 %% Book chapter
