--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -1164,10 +1164,10 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
             Théo Winterhalter},
   title = {Towards formally secure compilation of verified {F*} programs
            against unverified {ML} contexts (Extended Abstract)},
-  howpublished = {Draft},
+  howpublished = {Presented at PriSC},
   url = {https://cezarandrici.com/wp-content/uploads/publications/prisc26.pdf},
-  month = nov,
-  year = {2025},
+  month = jan,
+  year = {2026},
   chcontrib = {minor},
 }
 
