--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -806,7 +806,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 
 %% Journal Papers
 
-@article{everest-toplas,
+@article{everest-toplas26,
   author = {Danel Ahman and
             Karthikeyan Bhargavan and
             Barry Bond and
@@ -828,10 +828,12 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
             Exequiel Rivas and
             Nikhil Swamy and
             Santiago Zanella-Béguelin},
-  title = {Project Everest: Perspectives from Developing Industrial-grade High-Assurance Software},
+  title = {Project {Everest}: Perspectives from Developing Industrial-grade High-Assurance Software},
   howpublished = {Draft; Accepted at TOPLAS},
-  month = sept,
+  month = sep,
   year = {2025},
+  url = {https://project-everest.github.io/assets/everest-perspectives-2025.pdf},
+  chcontrib = {minor},
 }
 
 @article{ssprove-toplas,
