--- a/publications/catalin.bib
+++ b/publications/catalin.bib
@@ -806,7 +806,7 @@ http://ieee-security.org/TC/SP2013/papers/4977a003.pdf
 
 %% Journal Papers
 
-@article{everest-toplas26,
+@misc{everest-toplas26,
   author = {Danel Ahman and
             Karthikeyan Bhargavan and
             Barry Bond and
